<resources>
    <string name="app_name">TriviaApp</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">849303098819319</string>
    <string name="fb_login_protocol_scheme">fb849303098819319</string>
    <string name="Et_LoginPage_Username">Username</string>
    <string name="et_loginPage_password">Password</string>
    <string name="btn_loginPage_login">Login</string>
    <string name="nav_title_home">Home</string>
    <string name="nav_title_profile">Profile</string>
    <string name="nav_title_shop">Shop</string>
    <string name="nav_title_settings">Settings</string>
    <string name="nav_drawer_message">Message</string>
    <string name="nav_draw_chat">Chat</string>
    <string name="nav_draw_profile">Profile</string>
    <string name="nav_draw_share">Share</string>
    <string name="nav_draw_send">Send</string>
    <string name="nav_draw_communicate">Communicate</string>
    <string name="nav_draw_header_username">Username</string>
    <string name="dummy_mail">user@gmail.com</string>
    <string name="dummy_gold">2250</string>
    <string name="dummy_mail_title">Mail Title</string>
    <string name="dummy_mail_content">Content</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->

</resources>
