<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_draw_message"
            android:icon="@drawable/ic_email_black_24dp"
            android:title="@string/nav_drawer_message" />
        <item
            android:id="@+id/nav_draw_chat"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/nav_draw_chat" />
        <item
            android:id="@+id/nav_draw_profile"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/nav_draw_profile" />

    </group>

    <item android:title="@string/nav_draw_communicate">
        <menu>
            <item
                android:id="@+id/nav_draw_share"
                android:icon="@drawable/ic_share_black_24dp"
                android:title="@string/nav_draw_share" />
            <item
                android:id="@+id/nav_draw_send"
                android:icon="@drawable/ic_send_black_24dp"
                android:title="@string/nav_draw_send" />

        </menu>
    </item>

</menu>